# wash

./: CHANGELOG.md  README.md  wash.cabal
src/: Language.hs  Main.hs  Parser.hs
